<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="@color/colorIconsText">

        <EditText
            android:id="@+id/et_drink_price"
            style="@android:style/Widget.Material.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_drink_name"
            android:layout_below="@+id/et_drink_name"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/txt_drink_price"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_drink_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/et_drink_price"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/et_drink_price"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/txt_drink_ingredients"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_drink_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ib_drink_add_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/txt_drink_name"
            android:inputType="textPersonName" />


        <ImageButton
            android:id="@+id/ib_drink_add_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="ibLoadImage"
            app:srcCompat="@android:drawable/ic_input_add" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="@color/colorLightPrimary">

        <ImageView
            android:id="@+id/iv_drink_add_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            app:srcCompat="@android:drawable/ic_menu_gallery" />
    </RelativeLayout>

</LinearLayout>